add classes card details

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                                     <a href="#"><i class="fa-solid fa-plus"></i></a>
                                 </button>
                                 <!-- offcanvas -->
-                                <div class="offcanvas show offcanvas-size-xl offcanvas-end " tabindex="-1"
+                                <div class="offcanvas offcanvas-size-xl offcanvas-end " tabindex="-1"
                                     id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
 
                                     <!-- offcanvas header-->
@@ -283,13 +283,15 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- main body -->
                 <div class="main_body col-12">
                     <div class="container-fluid">
                         <div class="row">
                             <div class=" col-12 col-md-8">
                                 <div class="card">
-                                    <div class="card-title p-2">
-                                        <h5>Card title</h5>
+                                    <div class="card-title my_card_title p-2">
+                                        <h5>Prossime classi</h5>
                                     </div>
                                     <table class="table">
                                         <thead>
@@ -300,61 +302,133 @@
                                             <th class="col-4 col-sm-2">Azioni</th>
                                         </thead>
                                         <tbody>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 75</span>
+                                                </td>
+                                                <td class="start-date">15 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="done">
+                                                    <span>Done</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 76</span>
+                                                </td>
+                                                <td class="start-date">16 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="done">
+                                                    <span>Done</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 77</span>
+                                                </td>
+                                                <td class="start-date">17 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="process">
+                                                    <span>Process</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 78</span>
+                                                </td>
+                                                <td class="start-date">18 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="done">
+                                                    <span>Done</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 79</span>
+                                                </td>
+                                                <td class="start-date">19 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="fail">
+                                                    <span>Failed</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 80</span>
+                                                </td>
+                                                <td class="start-date">20 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="done">
+                                                    <span>Done</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 81</span>
+                                                </td>
+                                                <td class="start-date">21 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="fail">
+                                                    <span>Failed</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
-                                            <tr>
-                                                <td class="">Alfreds </td>
-                                                <td class="start-date">Maria </td>
-                                                <td class="roi">Germany</td>
-                                                <td class="">Maria </td>
-                                                <td class="">Maria </td>
+                                            <tr class="">
+                                                <td class="">
+                                                    <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
+                                                        alt="">
+                                                    <span>Classe 82</span>
+                                                </td>
+                                                <td class="start-date">22 Feb 2024</td>
+                                                <td class="roi">20%</td>
+                                                <td class="done">
+                                                    <span>Done</span>
+                                                </td>
+                                                <td class="next_classes_actions ">
+                                                    <span> <i class="fa-solid fa-pencil"></i></span>
+                                                    <span><i class="fa-solid fa-trash"></i></span>
+                                                </td>
                                             </tr>
 
                                         </tbody>
