--- a/index.html
+++ b/index.html
@@ -436,11 +436,14 @@
 
                                 </div>
                                 <div class="card">
-                                    <div class="card-title p-2">
+                                    <div class="card-title my_card_title p-2">
                                         <h5>F.A.Q.</h5>
                                     </div>
-                                    <div class="card_body">
-                                        <button class="my_accordion">Section 1</button>
+                                    <div class=" ">
+                                        <button class="my_accordion d-flex justify-content-between">
+                                            <span>Come aggiungere un nuovo studente?</span>
+                                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                                        </button>
                                         <div class="my_panel">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                                 tempor incididunt ut labore et dolore
@@ -449,7 +452,10 @@
                                                 consequat.</p>
                                         </div>
 
-                                        <button class="my_accordion">Section 2</button>
+                                        <button class="my_accordion d-flex justify-content-between">
+                                            <span>Come posso accedere alle informazioni del mio account?</span>
+                                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                                        </button>
                                         <div class="my_panel">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                                 tempor incididunt ut labore et dolore
@@ -458,7 +464,10 @@
                                                 consequat.</p>
                                         </div>
 
-                                        <button class="my_accordion">Section 3</button>
+                                        <button class="my_accordion d-flex justify-content-between ">
+                                            <span>Posso usare questa dashboard da mobile?</span>
+                                            <span><i class="fa-solid fa-chevron-down"></i></span>
+                                        </button>
                                         <div class="my_panel">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                                                 tempor incididunt ut labore et dolore
@@ -537,20 +546,18 @@
 
         var acc = document.getElementsByClassName("my_accordion");
         var i;
-        var panel = document.getElementsByClassName("my_panel");
 
         for (i = 0; i < acc.length; i++) {
             acc[i].addEventListener("click", function () {
                 this.classList.toggle("active");
                 var panel = this.nextElementSibling;
-                if (panel.style.maxHeight) {
-                    panel.style.maxHeight = null;
+                if (panel.style.display === "block") {
+                    panel.style.display = "none";
                 } else {
-                    panel.style.maxHeight = panel.scrollHeight + "px";
+                    panel.style.display = "block";
                 }
             });
         }
-
 
 
 
