--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                                         <h5>F.A.Q.</h5>
                                     </div>
                                     <div class=" ">
-                                        <button class="my_accordion d-flex justify-content-between">
+                                        <button class="my_accordion d-flex justify-content-between align-items-center">
                                             <span>Come aggiungere un nuovo studente?</span>
-                                            <span><i class="fa-solid fa-chevron-down"></i></span>
+
                                         </button>
                                         <div class="my_panel">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -452,9 +452,10 @@
                                                 consequat.</p>
                                         </div>
 
-                                        <button class="my_accordion d-flex justify-content-between">
+                                        <button
+                                            class="my_accordion my_accordion d-flex justify-content-between align-items-center">
                                             <span>Come posso accedere alle informazioni del mio account?</span>
-                                            <span><i class="fa-solid fa-chevron-down"></i></span>
+
                                         </button>
                                         <div class="my_panel">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -464,9 +465,10 @@
                                                 consequat.</p>
                                         </div>
 
-                                        <button class="my_accordion d-flex justify-content-between ">
+                                        <button
+                                            class="my_accordion my_accordion d-flex justify-content-between align-items-center">
                                             <span>Posso usare questa dashboard da mobile?</span>
-                                            <span><i class="fa-solid fa-chevron-down"></i></span>
+
                                         </button>
                                         <div class="my_panel">
                                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
