add todo and report cards details

--- a/index.html
+++ b/index.html
@@ -482,22 +482,22 @@
                             </div>
                             <div class="col-12 col-md-4">
                                 <div class="card">
-                                    <div class="card-title p-2">
+                                    <div class="card-title my_card_title p-2">
                                         <h5>Todo</h5>
                                     </div>
                                     <div class="card-body">
                                         <form action="#">
                                             <div class="check_item">
                                                 <input type="checkbox" name="check01" id="check01">
-                                                <label for="check01">prima check</label>
+                                                <label for="check01">Kickoff nuove classi</label>
                                             </div>
                                             <div class="check_item">
                                                 <input type="checkbox" name="check01" id="check01">
-                                                <label for="check01">prima check</label>
+                                                <label for="check01">Lezione su Bootstrap 5 in classe #75</label>
                                             </div>
                                             <div class="check_item">
                                                 <input type="checkbox" name="check01" id="check01">
-                                                <label for="check01">prima check</label>
+                                                <label for="check01">Controllare username github studenti</label>
                                             </div>
                                         </form>
                                     </div>
@@ -505,18 +505,18 @@
                                 <div class="card">
 
                                     <img src="./assets/img/stats.jpeg" class="card-img-top" alt="...">
-                                    <div class="card-title">
-                                        <h5>bla bla bla</h5>
-                                        <p>Lorem, ipsum dolor.</p>
+                                    <div class="card_title">
+                                        <h5>Utenti attivi</h5>
+                                        <p>Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
                                     </div>
                                     <div class="month">
-                                        gennaio 2010
+                                        Gennaio 1200
                                     </div>
                                     <div class="month">
-                                        gennaio 2010
+                                        Febbraio 800
                                     </div>
                                     <div class="month">
-                                        gennaio 2010
+                                        Marzo 1500
                                     </div>
                                     <div class="link">
                                         <a href="#">Visualizza report approfondito</a>
