--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                                     <i class="fa-solid fa-bell"></i>
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><a class="dropdown-item" href="#">Profilo</a></li>
+                                    <li><a class="dropdown-item" href="#">Fatturazione</a></li>
 
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    <li><a class="dropdown-item" href="#">Logout</a></li>
                                 </ul>
                             </li>
 
@@ -125,14 +125,14 @@
                     </div>
 
                     <div class="side_bar_item">
-                        <a href="" class="d-inline-flex align-items-center gap-2 ">
+                        <a href="" class="d-inline-flex align-items-center gap-1 ">
                             <i class="fa-solid fa-signal"></i> <span>Signals</span>
                         </a>
                     </div>
                 </div>
                 <div class="side_bottom">
 
-                    <div class="side_bar_item">
+                    <div class="side_bar_item_bottom">
                         <a href="" class="d-inline-flex align-items-center gap-2 ">
                             <i class="fa-solid fa-gear"></i> <span>Admin</span>
                         </a>
@@ -142,7 +142,11 @@
 
             </div>
             <div class="main_right d-flex flex-column flex-grow-1">
-                <div class="main_top ">
+
+
+                <!-- main top -->
+
+                <div class="main_top">
                     <div class="row">
 
 
@@ -158,9 +162,9 @@
                                 <button class="btn"><a href="#">3 app</a></button>
                                 <i class="fa-solid fa-angles-right"></i>
                                 <div class="levels_button">
-                                    <button class="btn" type="button" data-bs-toggle="collapse"
-                                        data-bs-target="#collapseWidthExample" aria-expanded="false"
-                                        aria-controls="collapseWidthExample">
+                                    <button id="plus" onclick="myFunction()" class="btn" type="button"
+                                        data-bs-toggle="collapse" data-bs-target="#collapseWidthExample"
+                                        aria-expanded="false" aria-controls="collapseWidthExample">
                                         <a href="#">+</a>
                                     </button>
                                 </div>
@@ -185,7 +189,7 @@
                         </div>
 
                         <!-- .main_top_center -->
-                        <div class="main_top_center flex-column col-12 col-lg-4 ">
+                        <div id="myDIV" class="main_top_center flex-column col-12 col-lg-4 col-xl-3">
                             <div class="up  ">
                                 <p>Studenti online negli ultimi 30 minuti</p>
                             </div>
@@ -195,15 +199,15 @@
                         </div>
 
                         <!-- .main_top_right -->
-                        <div class="main_top_right col-12 col-lg-4 col-xl-2">
-                            <div class="up d-flex align-items-start">
+                        <div class="main_top_right col-12 col-lg-4 col-xl-3">
+                            <div class="up d-flex gap-4 ">
                                 <p>Nuovo Studente</p>
                                 <button class="btn" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight"
                                     aria-controls="offcanvasRight">
                                     <a href="#"><i class="fa-solid fa-plus"></i></a>
                                 </button>
                                 <!-- offcanvas -->
-                                <div class="offcanvas offcanvas-size-xl offcanvas-end " tabindex="-1"
+                                <div class="offcanvas offcanvas-size-md offcanvas-size-xl offcanvas-end " tabindex="-1"
                                     id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
 
                                     <!-- offcanvas header-->
@@ -295,25 +299,25 @@
                                     </div>
                                     <table class="table">
                                         <thead>
-                                            <th class="col-4 col-md-3 col-lg-5">Nome</th>
+                                            <th class="col-4 col-md-3 col-lg-4">Nome</th>
                                             <th class="start-date col-2">Data inizio</th>
                                             <th class="roi col-2">ROI</th>
                                             <th class="col-4 col-sm-2">Stato</th>
-                                            <th class="col-4 col-sm-2">Azioni</th>
+                                            <th class="col-4 col-sm-2 col-md-3 ">Azioni</th>
                                         </thead>
                                         <tbody>
                                             <tr class="">
-                                                <td class="">
+                                                <td class="td">
                                                     <img class="mr-3" width="35" src="./assets/img/class-avatar.jpg"
                                                         alt="">
                                                     <span>Classe 75</span>
                                                 </td>
-                                                <td class="start-date">15 Feb 2024</td>
-                                                <td class="roi">20%</td>
-                                                <td class="done">
+                                                <td class="start-date td">15 Feb 2024</td>
+                                                <td class="roi td">20%</td>
+                                                <td class="done td">
                                                     <span>Done</span>
                                                 </td>
-                                                <td class="next_classes_actions ">
+                                                <td class="next_classes_actions td">
                                                     <span> <i class="fa-solid fa-pencil"></i></span>
                                                     <span><i class="fa-solid fa-trash"></i></span>
                                                 </td>
@@ -561,6 +565,14 @@
             });
         }
 
+        function myFunction() {
+            var x = document.getElementById("myDIV");
+            if (x.style.visibility === "hidden") {
+                x.style.visibility = "visible";
+            } else {
+                x.style.visibility = "hidden";
+            }
+        }
 
 
 
